[package]
name = "my_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
spin = "0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = [
    "build",
    "-Z", "build-std=core,compiler_builtins",
    "-Z", "build-std-features=compiler-builtins-mem",
    "--target", "x86_64-my_os.json"
]
